jdk8 compatibility fixes